# fastdup-poetry-issue

./: README.md  pyproject.toml
